# recap

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml.example  pyproject.toml  summary.txt
desktop/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src/: App.test.tsx  App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: DropZone.tsx  Inspector.tsx  LogView.tsx  ProgressSteps.tsx  SettingsScreen.tsx  Sidebar.tsx  StatusDot.tsx  TranscriptView.tsx  Workspace.tsx
desktop/src/components/ui/: badge.tsx  button.tsx  controls.tsx  toast.tsx
desktop/src/hooks/: useRecap.ts
desktop/src/lib/: bridge.test.ts  bridge.ts  providers.test.ts  providers.ts  types.ts  utils.ts
docs/: desktop-agent-checklist.md  desktop-bridge-contract.md  desktop-tauri-spec.md  desktop-ux.md
docs/ui-reference/: README.md  index.html  styles.css
src/: cli.py  config.py  desktop_bridge.py  formatters.py  models.py  pipeline.py  preprocessing.py  prompts.py  protocols.py  secrets_store.py  transcript.py  utils.py  workflows.py
src/providers/: factory.py  llm.py  ollama.py  openai.py  whisper.py
tests/: test_cli.py  test_config.py  test_desktop_bridge.py  test_factory.py  test_formatters.py  test_import_smoke.py  test_llm.py  test_pipeline.py  test_preprocessing.py  test_secrets_store.py  test_transcript.py  test_utils.py  test_whisper.py  test_workflows.py
tests/integration/: test_cli_flows.py
