[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-sum"
version = "0.1.0"
description = "Meeting transcription and summarization tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.22.0.52",
    "ollama>=0.4.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12.0",
]

[project.scripts]
recap = "cli:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
sources = {"src" = ""}
include = [
    "/src/*.py",
    "/src/providers/*.py",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
