[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-sum"
version = "0.1.0"
description = "Meeting transcription and summarization tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.22.0.52",
    "openai>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12.0",
]

[project.scripts]
recap = "cli:app"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9", "mypy>=1.15"]

[tool.hatch.build.targets.wheel]
sources = {"src" = ""}
include = [
    "/src/*.py",
    "/src/providers/*.py",
]


[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["integration: end-to-end CLI flows (mocks only at provider-factory boundary)"]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cli", "config", "formatters", "models", "pipeline", "prompts", "protocols", "providers", "transcript", "utils"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"
warn_unused_ignores = true
warn_return_any = false
