[package]
name = "recap-desktop"
version = "0.1.0"
description = "Recap desktop"
authors = ["Recap"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "recap_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
